--- a/skin/styles/scss/module/_index.scss
+++ b/skin/styles/scss/module/_index.scss
@@ -1,1 +1,10 @@
-@import "dialog";
+@import "plugins/index";
+@import "index_sections/index";
+@import "articles";
+@import "contacts";
+@import "team";
+@import "timeline";
+@import "portfolio";
+@import "project";
+@import "events";
+@import "main-slider";
