--- a/skin/styles/scss/utils/_vars.scss
+++ b/skin/styles/scss/utils/_vars.scss
@@ -1,9 +1,9 @@
 //** Colors
-$base-color: #444140;
-$primary-color: #3abd93;
-$secondary-color: #4baecd;
-$attention-color: #d41137;
-$bg-color: #f0f1f3;
+$base-color: #543e42;
+$primary-color: #57b7c7;
+$secondary-color: #66976b;
+$attention-color: #cf383b;
+$bg-color: #f7f3ec;
 $light-color: #fff;
 
 //** Body
@@ -19,8 +19,8 @@ $link-decoration: none !default;
 $link-hover-decoration: none !default;
 
 //** Typography
-$font-family-base: Arial, sans-serif !default;
-$font-family-heading: Arial, sans-serif !default;
+$font-family-base: 'Open Sans', Arial, sans-serif !default;
+$font-family-heading: 'Open Sans', Arial, sans-serif !default;
 
 $font-size-base: 16px !default;
 
