--- a/skin/styles/scss/utils/_placeholders.scss
+++ b/skin/styles/scss/utils/_placeholders.scss
@@ -38,7 +38,7 @@
   font-family: $font-family-heading;
   font-size: 30px;
   font-weight: 700;
-  margin-bottom: 1em;
+  margin: .8em 0;
   text-align: center;
 }
 
