--- a/skin/styles/scss/utils/_placeholders.scss
+++ b/skin/styles/scss/utils/_placeholders.scss
@@ -38,7 +38,7 @@
   font-family: $font-family-heading;
   font-size: 30px;
   font-weight: 700;
-  margin: .8em 0;
+  margin: 0 0 .8em;
   text-align: center;
 }
 
